Minor comment/README update wrt "kde5" and "gtk" VCL plugins
"kde5" was renamed to "kf5" and "gtk" (i.e. gtk2) VCL plugin
was removed in commit 1ae450504cf57457f9702684b1517fda1dd3c481.

Change-Id: I294d2463fa77d6a740fc0a43039b5e6a2653846c
Reviewed-on: https://gerrit.libreoffice.org/79908
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>

--- a/vcl/README
+++ b/vcl/README
@@ -33,15 +33,12 @@ qt5/
 
 unx/
 	+ X11 backend and its sub-platforms
-
-	gtk/
-		+ GTK2 support
 	gtk3/
 		+ GTK3 support
 	kf5/
-		+ KF5 support
+		+ KF5 support (based on qt5 VCL plugin mentioned above)
 	gtk3_kde5/
-		+ GTK3 support with KDE5 file pickers (alternative to native kde5 one)
+		+ GTK3 support with KDE5 file pickers (alternative to native kf5 one)
 	generic/
 		+ raw X11 support
 
