Upgrade to ICU 64.2
As an interim step to upgrade to ICU 65.1
Adds new scripts and Unicode blocks from Unicode 12.

Change-Id: Idc4a6b29ffb04bcb424522fcbd29a8db0428c056
Reviewed-on: https://gerrit.libreoffice.org/81611
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins

--- a/external/icu/icu4c-build.patch.1
+++ b/external/icu/icu4c-build.patch.1
@@ -8,7 +8,7 @@ diff -ur icu.org/source/config/mh-darwin icu/source/config/mh-darwin
 -ifeq ($(ENABLE_RPATH),YES)
 -LD_SONAME = -Wl,-compatibility_version -Wl,$(SO_TARGET_VERSION_MAJOR) -Wl,-current_version -Wl,$(SO_TARGET_VERSION) -install_name $(libdir)/$(notdir $(MIDDLE_SO_TARGET))
 -else
--LD_SONAME = -Wl,-compatibility_version -Wl,$(SO_TARGET_VERSION_MAJOR) -Wl,-current_version -Wl,$(SO_TARGET_VERSION) -install_name $(notdir $(MIDDLE_SO_TARGET))
+-LD_SONAME = -Wl,-compatibility_version -Wl,$(SO_TARGET_VERSION_MAJOR) -Wl,-current_version -Wl,$(SO_TARGET_VERSION) -install_name $(notdir $(MIDDLE_SO_TARGET)) $(PKGDATA_TRAILING_SPACE)
 -endif
 +LD_SONAME = -Wl,-compatibility_version -Wl,$(SO_TARGET_VERSION_MAJOR) -Wl,-current_version -Wl,$(SO_TARGET_VERSION) -install_name @__________________________________________________URELIB/$(notdir $(MIDDLE_SO_TARGET))
  
