Upgrade to ICU 65.1
sberg says:  On Windows, implicit --enable-extras first causes a build breaker
in workdir/UnpackedTarball/icu/source/extras/scrptrun when linking, because
Windows link.exe doesn't understand -o.  But even with a patch

> --- source/extra/scrptrun/Makefile.in
> +++ source/extra/scrptrun/Makefile.in
> @@ -74,7 +74,7 @@
>  	 && CONFIG_FILES=$(subdir)/$@ CONFIG_HEADERS= $(SHELL) ./config.status
>
>  $(TARGET) : $(OBJECTS)
> -	$(LINK.cc) -o $@ $^ $(LIBS)
> +	$(LINK.cc) $(OUTOPT)$@ $^ $(LIBS)
>  	$(POST_BUILD_STEP)
>
>  invoke:

linking would still fail with a missing ../../lib/icuucdd.lib, which is
apparently expanded from $(LIBS) there, but I have no idea where it should be
built but isn't.  Lets hope that --disable-extras is sufficient for our needs.

Change-Id: I6d0117b230caa41abf488fcd069028e3474700f8
Reviewed-on: https://gerrit.libreoffice.org/81632
Tested-by: Jenkins
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>

--- a/external/icu/icu4c-scriptrun.patch.1
+++ b/external/icu/icu4c-scriptrun.patch.1
@@ -39,8 +39,8 @@ diff -ur icu.org/source/extra/scrptrun/scrptrun.h icu/source/extra/scrptrun/scrp
  #include "unicode/uscript.h"
 +#include <vector>
  
- struct ScriptRecord
- {
+ U_NAMESPACE_BEGIN
+ 
 @@ -81,7 +82,7 @@
      int32_t scriptEnd;
      UScriptCode scriptCode;
